@@ -9,7 +9,7 @@ Standards-Version: 3.6.1.0
 Package: hw-detect
 XC-Package-Type: udeb
 Architecture: any
-Depends: discover | hotplug-udeb, rootskel (>= 0.54), archdetect, cdebconf-udeb (>= 0.75)
+Depends: ${hw-detect:discover}, rootskel (>= 0.54), archdetect, cdebconf-udeb (>= 0.75)
 Description: Detect hardware and load kernel drivers for it
 
 Package: ethdetect
