@@ -11,6 +11,7 @@ ddetect (1.18) UNRELEASED; urgency=low
       with dpkg 1.13.
     - hw-detect and ethdetect are entirely Linux-specific, so make them do
       nothing on the Hurd for now.
+    - Make discover | hotplug-udeb dependency Linux-specific.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 21 May 2005 13:17:10 -0400
 
